- Fixed: Fix std::string::compare method issue (#507).
- Fixed: Fix the webserver not stopping and not restarting issue after an exception occurred.
- Fixed: Fix multiple session cleaner start after restarting webserver.
- Fixed: Fix compilation issue in environment with boost <= 1.57 (in server_settings).
- Fixed: Fix issue when no certificate file path is set in the command line.
- Updated: OpenZWave, configuration files
- Updated: SQLite3 v3.11.0.

Version 2.3530 (November 1th 2015)
- Implemented: Degree Days in Temperature report
- Implemented: RFXCom, support for Home Confort TEL-010
- Fixed: Segmentation fault while cleaning timed out sessions (#180)

Version 2.3521 (October 31th 2015)
- Implemented "Stop" state in blockly in switch states
- Implemented: Ability to parse data coming from an HTTP POST data with a lua script (seb)
- Implemented: Added Logitech Media Server support (thanks to EddyK69!!)
- Implemented: Added pushbullet notifications (thanks to tofra!!)
- Implemented: Arabic translation (big thanks to Mo7sen!!)
- Implemented: Blockly, Option to compare sensor value against another sensor value
- Implemented: Blockly, Split Utility Sensors into multiple groups
- Implemented: Blockly/Lua SendSMS
- Implemented: Catch SIGHUP signal for log rotation (LarsForum)
- Implemented: Danish translation (big thanks to jokkemokke!!)
- Implemented: Devices Tab, now displaying scenes/groups
- Implemented: Dummy Hardware, Ampere Single (single ampere value, other ampere sensor expects 3 values)
- Implemented: EventSystem, now also reacts on master switches when a slave switch state changes
- Implemented: EventSystem, now supports Weather sensors: UV/Distance, Wind Gust (or speed when gust is not available), Solar Radiation and Rain
- Implemented: EventSystem, optimized Blockly calls (saves a lot of calls and cpu)
- Implemented: Hebrew translation (big thanks to mickeyv!!)
- Implemented: HTTP Data push, new types for Type/SubType/Hostname/Device Name